# rinha-de-backend-2025

./: Cargo.toml  Dockerfile  docker-compose-payment-processor.yaml  docker-compose.yml  k6-stress-test.js  make.sh  nginx.config
participantes/ortisan-rust/payments_api/: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  info.json
participantes/ortisan-rust/payments_api/sql/: 01-ddl.sql
participantes/ortisan-rust/payments_api/src/: main.rs
participantes/ortisan-rust/payments_api/src/application/domain/: payment.rs
participantes/ortisan-rust/payments_api/src/application/repositories/: mod.rs  models.rs  payment_repository.rs  schema.rs
participantes/ortisan-rust/payments_api/src/application/usecases/: create_payment.rs  get_payments_summary.rs  mod.rs
participantes/ortisan-rust/payments_api/src/infrastructure/: postgres.rs
participantes/ortisan-rust/payments_api/src/presentation/: data.rs  mod.rs  payment_handlers.rs  payment_routes.rs
src/: constants.rs  main.rs
src/application/: mod.rs
src/application/domain/: payment.rs
src/application/http/: http.rs
src/application/messaging/: consumer.rs  mod.rs  publisher.rs
src/application/repositories/: cache_repository.rs  mod.rs  models.rs  payment_repository.rs  schema.rs
src/application/usecases/: accept_payment.rs  create_payment.rs  get_payments_summary.rs  mod.rs  usecase.rs
src/infrastructure/: circuit_break.rs  health_checker.rs  http.rs  http_health_check.rs  mod.rs  postgres.rs  redis.rs  reqwest.rs  result.rs  utils.rs
src/presentation/: data.rs  health_checker.rs  mod.rs  payment_handlers.rs  payment_routes.rs  worker.rs
