[package]
name = "payments_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "numeric"] }
redis = { version = "0.32.4", features = ["json", "tokio-comp", "r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
bigdecimal = { version = "0.4.8", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.27"
